--- a/Jama/src/main/webapp/userProfile.xhtml
+++ b/Jama/src/main/webapp/userProfile.xhtml
@@ -12,12 +12,10 @@
 
 </h:head>
 <h:body>
-
-
 	<ui:include src="/resources/sections/toolbar.xhtml" />
 	
-	<p:panel  header="#{msgs.userWiz_header}">
-	<sections:user mode="wizard">
+	<p:panel header="#{msgs.personalData}">
+	<sections:user mode="profile">
 	
 	</sections:user>
 	</p:panel>
