--- a/Jama/src/main/webapp/agreementSchedule.xhtml
+++ b/Jama/src/main/webapp/agreementSchedule.xhtml
@@ -83,9 +83,8 @@
 
 			<p:column id="agrScheduleDateColumn">
 
-
 				<f:facet name="header">
-					<h:outputText value="#{msgs.deadlineDate}" />
+					<h:outputText value="#{msgs.nextDeadline}" />
 					<h:form id="calendarFilters">
 						<div style="display: block; width: 90%; margin: auto;">
 							<p:calendar id="firstDate" styleClass="calendarFilter" widgetVar="w_firstDate" value="#{opContractSchedulePCB.lazyModel.filterMinDate}"
