--- a/Jama/src/main/webapp/resources/sections/agreementWizLastStep.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizLastStep.xhtml
@@ -7,7 +7,7 @@
 
 		<p:panel id="agrLastStepPanel" styleClass="semiEmptyPanel">
 
-			<h:outputFormat value="#{msgs.agrCongr}" >
+			<h:outputFormat value="#{msgs.agrCongr}">
 				<f:param value="#{agreementWizardPB.contractTypeName}"></f:param>
 			</h:outputFormat>
 
@@ -21,9 +21,20 @@
 			</ui:remove>
 		</p:panel>
 
-		<p:commandButton id="agrSaveButton" styleClass="saveButton" icon="ui-icon-disk" value="#{msgs.save}" action="#{agreementWizardPB.save()}"/>
+		<p:commandButton id="agrSaveButton" styleClass="saveButton" icon="ui-icon-disk" value="#{msgs.save}" action="#{agreementWizardPB.save()}" />
 
-		<p:blockUI block="agrSaveButton" trigger="agrSaveButton"/>
+		<p:blockUI block="agrSaveButton" trigger="agrSaveButton" />
+
+		<ui:remove>
+			<p:ajaxStatus>
+				<f:facet name="start">
+					<h:graphicImage value="loading.gif" />
+				</f:facet>
+				<f:facet name="complete">
+					<h:outputText value="" />
+				</f:facet>
+			</p:ajaxStatus>
+		</ui:remove>
 
 	</p:tab>
 
