--- a/Jama/src/main/webapp/chiefContractList.xhtml
+++ b/Jama/src/main/webapp/chiefContractList.xhtml
@@ -67,7 +67,8 @@
 
 			<p:column styleClass="closedFilterColumn" filterBy="#{contract.closedString}"
 				filterOptions="#{utilPB.getBooleanFilter(msgs.closedMP, msgs.openMP)}" headerText="#{msgs.openClosed}">
-				<h:selectBooleanCheckbox value="#{contract.closed}" disabled="true" />
+				<p:graphicImage styleClass="center-img" library="images" height="25" width="25" name="locked.png" rendered="#{contract.closed}" />
+				<p:graphicImage styleClass="center-img" library="images" height="25" width="25" name="unlocked.png" rendered="#{not contract.closed}" />
 			</p:column>
 
 			<p:column styleClass="companyFilterColumn" filterBy="#{contract.company.id}" headerText="#{msgs.company}" filterMatchMode="exact"
