--- a/Jama/src/main/webapp/resources/sections/user.xhtml
+++ b/Jama/src/main/webapp/resources/sections/user.xhtml
@@ -1,9 +1,5 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:composite="http://java.sun.com/jsf/composite"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui" xmlns:composite="http://java.sun.com/jsf/composite"
 	xmlns:dialogs="http://java.sun.com/jsf/composite/dialogs">
 
 <composite:interface>
@@ -26,13 +22,9 @@
 				</p:column>
 
 				<p:column>
-					<h:inputText id="name" value="#{userEditor.user.name}"
-						label="#{msgs.name}" required="true"
-						rendered="#{cc.attrs.mode == 'wizard'}">
+					<h:inputText id="name" value="#{userEditor.user.name}" label="#{msgs.name}" required="true" rendered="#{cc.attrs.mode == 'wizard'}">
 					</h:inputText>
-					<h:outputText id="name_output" value="#{userEditor.user.name}"
-						label="#{msgs.name}" required="true"
-						rendered="#{cc.attrs.mode == 'profile'}">
+					<h:outputText id="name_output" value="#{userEditor.user.name}" label="#{msgs.name}" required="true" rendered="#{cc.attrs.mode == 'profile'}">
 					</h:outputText>
 
 				</p:column>
@@ -48,13 +40,10 @@
 				</p:column>
 
 				<p:column>
-					<h:inputText id="surname" value="#{userEditor.user.surname}"
-						label="#{msgs.surname}" required="true"
-						rendered="#{cc.attrs.mode == 'wizard'}">
+					<h:inputText id="surname" value="#{userEditor.user.surname}" label="#{msgs.surname}" required="true" rendered="#{cc.attrs.mode == 'wizard'}">
 					</h:inputText>
-					<h:outputText id="surname_output"
-						value="#{userEditor.user.surname}" label="#{msgs.surname}"
-						required="true" rendered="#{cc.attrs.mode == 'profile'}">
+					<h:outputText id="surname_output" value="#{userEditor.user.surname}" label="#{msgs.surname}" required="true"
+						rendered="#{cc.attrs.mode == 'profile'}">
 					</h:outputText>
 				</p:column>
 
@@ -69,14 +58,12 @@
 				</p:column>
 
 				<p:column>
-					<p:selectOneMenu id="depthMenu" styleClass="depthMenu"
-						value="#{userEditor.selectedDept}" label="#{msgs.department}"
-						required="true" filter="true" filterMatchMode="contains"
-						rendered="#{cc.attrs.mode == 'wizard'}">
+					<p:selectOneMenu id="depthMenu" styleClass="depthMenu" value="#{userEditor.selectedDept}" label="#{msgs.department}" required="true"
+						filter="true" filterMatchMode="contains" rendered="#{cc.attrs.mode == 'wizard'}">
 						<f:selectItems value="#{utilPB.depthItems}" />
 						<f:converter binding="#{departmentConverter}" />
 					</p:selectOneMenu>
-					
+
 					<h:outputText value="#{userEditor.selectedDept.code}" rendered="#{cc.attrs.mode == 'profile'}">
 					</h:outputText>
 
@@ -95,16 +82,14 @@
 				</p:column>
 
 				<p:column>
-					<p:password id="password" required="true" match="confirmPassword" label="#{msgs.password_confirm}"
-						value="#{userEditor.password}">
+					<p:password id="password" required="true" match="confirmPassword" label="#{msgs.password_confirm}" value="#{userEditor.password}">
 						<f:ajax event="blur"></f:ajax>
 					</p:password>
 
 				</p:column>
 
 				<p:column>
-					<p:message id="confirmPasswordError" styleClass="errorMessage"
-						autoUpdate="true" for="password" />
+					<p:message id="confirmPasswordError" styleClass="errorMessage" autoUpdate="true" for="password" />
 				</p:column>
 
 			</p:row>
@@ -118,8 +103,7 @@
 					</p:password>
 				</p:column>
 				<p:column>
-					<p:message id="requiredConfirmPasswordError"
-						styleClass="errorMessage" autoUpdate="true" for="confirmPassword" />
+					<p:message id="requiredConfirmPasswordError" styleClass="errorMessage" autoUpdate="true" for="confirmPassword" />
 				</p:column>
 
 			</p:row>
@@ -131,15 +115,12 @@
 				</p:column>
 
 				<p:column>
-					<h:selectOneMenu id="type"
-						value="#{userEditor.user.role}" label="#{msgs.role}"
-						required="true" rendered="#{cc.attrs.mode == 'wizard'}">
+					<h:selectOneMenu id="type" value="#{userEditor.user.role}" label="#{msgs.role}" required="true" rendered="#{cc.attrs.mode == 'wizard'}">
 						<f:selectItems value="#{utilPB.rolesItems}" />
 						<f:ajax event="blur" execute="@this" render="typeError" />
 
 					</h:selectOneMenu>
-					<h:outputText value="#{userEditor.user.role.displayString}"
-						rendered="#{cc.attrs.mode == 'profile'}" />
+					<h:outputText value="#{userEditor.user.role.displayString}" rendered="#{cc.attrs.mode == 'profile'}" />
 
 				</p:column>
 
@@ -151,8 +132,7 @@
 
 			<p:row>
 				<p:column>
-					<h:outputText  value="#{msgs.serialNumber}"
-						 />
+					<h:outputText value="#{msgs.serialNumber}" />
 				</p:column>
 
 				<p:column>
@@ -161,8 +141,7 @@
 						<f:convertNumber />
 					</h:inputText>
 
-					<h:outputText value="#{userEditor.user.serialNumber}"
-						rendered="#{cc.attrs.mode == 'profile'}" />
+					<h:outputText value="#{userEditor.user.serialNumber}" rendered="#{cc.attrs.mode == 'profile'}" />
 				</p:column>
 
 				<p:column rendered="#{cc.attrs.mode == 'wizard'}">
@@ -177,13 +156,10 @@
 				</p:column>
 
 				<p:column>
-					<p:inputText id="email" required="true" label="email"
-						requiredMessage="Please enter your email address."
-						validatorMessage="#{msgs.err_invalidEmail}"
-						value="#{userEditor.user.email}">
+					<p:inputText id="email" required="true" label="email" requiredMessage="Please enter your email address."
+						validatorMessage="#{msgs.err_invalidEmail}" value="#{userEditor.user.email}">
 
-						<f:validateRegex
-							pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
+						<f:validateRegex pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
 						<f:ajax event="blur" execute="@this" render="emailError" />
 
 					</p:inputText>
@@ -203,8 +179,7 @@
 
 		</p:panelGrid>
 
-		<p:commandButton value="#{msgs.changePassword_button}" type="button"
-			onclick="w_change_passwd.show()" rendered="#{cc.attrs.mode == 'profile'}">
+		<p:commandButton value="#{msgs.changePassword_button}" type="button" onclick="w_change_passwd.show()" rendered="#{cc.attrs.mode == 'profile'}">
 
 		</p:commandButton>
 
@@ -212,33 +187,29 @@
 
 
 
-		<p:commandButton value="#{msgs.save}" process="@form"
-			update="usrDataPanelGrid"
+		<p:commandButton value="#{msgs.save}" process="@form" update="usrDataPanelGrid"
 			oncomplete="if (!args.validationFailed) {w_confirm_save_user.show();}" />
 
-		<p:commandButton type="button" value="#{msgs.cancel}"
-			onclick="w_confirm_cancel_user.show();" />
+		<ui:remove>
+			<p:commandButton type="button" value="#{msgs.cancel}" onclick="w_confirm_cancel_user.show();" />
 
-		<p:confirmDialog message="#{msgs.sure}" header="#{msgs.cancel}"
-			severity="alert" widgetVar="w_confirm_cancel_user">
-			<p:commandButton value="#{msgs.yes}" action="#{userEditor.cancel()}"
-				immediate="true" oncomplete="w_confirm_cancel_user.hide()" />
-			<p:commandButton value="#{msgs.no}"
-				onclick="w_confirm_cancel_user.hide();" type="button" />
-		</p:confirmDialog>
+			<p:confirmDialog message="#{msgs.sure}" header="#{msgs.cancel}" severity="alert" widgetVar="w_confirm_cancel_user">
+				<p:commandButton value="#{msgs.yes}" action="#{userEditor.cancel()}" immediate="true" oncomplete="w_confirm_cancel_user.hide()" />
+				<p:commandButton value="#{msgs.no}" onclick="w_confirm_cancel_user.hide();" type="button" />
+			</p:confirmDialog>
+		</ui:remove>
 
-		<p:confirmDialog message="#{msgs.sure}" header="#{msgs.save}"
-			severity="alert" widgetVar="w_confirm_save_user">
-			<p:commandButton value="#{msgs.yes}" action="#{userEditor.save()}"
-				immediate="true" oncomplete="w_confirm_save_user.hide()" />
-			<p:commandButton value="#{msgs.no}"
-				onclick="w_confirm_save_user.hide();" type="button" />
+		<p:commandButton value="#{msgs.cancel}" action="#{userEditor.cancel()}" immediate="true" oncomplete="w_confirm_cancel_user.hide()" />
+
+		<p:confirmDialog message="#{msgs.sure}" header="#{msgs.save}" severity="alert" widgetVar="w_confirm_save_user">
+			<p:commandButton value="#{msgs.yes}" action="#{userEditor.save()}" immediate="true" oncomplete="w_confirm_save_user.hide()" />
+			<p:commandButton value="#{msgs.no}" onclick="w_confirm_save_user.hide();" type="button" />
 		</p:confirmDialog>
 
 	</h:form>
-	
-		<dialogs:changePasswdDialog>
-		</dialogs:changePasswdDialog>
+
+	<dialogs:changePasswdDialog>
+	</dialogs:changePasswdDialog>
 
 
 </composite:implementation>
