piccolo refactor sicurezza

--- a/Jama/src/main/webapp/login.xhtml
+++ b/Jama/src/main/webapp/login.xhtml
@@ -11,7 +11,7 @@
 	<h:outputStylesheet library="css" name="login.css"></h:outputStylesheet>
 </h:head>
 
-<body onload="#{userManager.decideHomeOrLogin()}">
+<body>
 	<h:form prependId="false">
 		<p:panel styleClass="centered">
 
