Role: chief_scientist > professor

--- a/Jama/src/main/webapp/home.xhtml
+++ b/Jama/src/main/webapp/home.xhtml
@@ -51,7 +51,7 @@
 
 
 				<p:panelGrid
-					rendered="#{userManager.loggedUser.hasRole('CHIEF_SCIENTIST')==true}"
+					rendered="#{userManager.loggedUser.hasRole('PROFESSOR')==true}"
 					styleClass="center">
 					<p:row>
 						<p:column>
